Adicionando tag <center>

--- a/references.html
+++ b/references.html
@@ -34,7 +34,14 @@
             <a class="references-card" href="tags/article.html">
                 <div>
                     <h1>&lt;article&gt;</h1>
-                    <h3>Define um <span class="color-text-orange">artigo</span>.</h3>
+                    <h3>Define um <strong class="color-text-orange">artigo</strong>.</h3>
+                </div>
+            </a>
+            <a class="references-card" href="tags/center.html">
+                <div>
+                    <h1>&lt;center&gt;</h1>
+                    <h3><strong class="color-text-orange">NÃO SUPORTADO EM HTML5</strong>. Use CSS em vez disso.</h3>
+                    <h3>Define um texto <strong class="color-text-orange">centralizado</strong>.</h3>
                 </div>
             </a>
         </div>
