Criação das tags Table e Button

--- a/references.html
+++ b/references.html
@@ -40,6 +40,28 @@
         </div>
     </div>
 
+    <div class="references-container">
+        <div class="references-cards">
+            <a class="references-card" href="tags/table.html">
+                <div>
+                    <h1>&lt;table&gt;</h1>
+                    <h3>Define uma <span class="color-text-orange">table em html</span>.</h3>
+                </div>
+            </a>
+        </div>
+    </div>
+
+    <div class="references-container">
+        <div class="references-cards">
+            <a class="references-card" href="tags/button.html">
+                <div>
+                    <h1>&lt;button&gt;</h1>
+                    <h3>Define um <span class="color-text-orange">butão clicável</span>.</h3>
+                </div>
+            </a>
+        </div>
+    </div>
+
     <div class="footer-container">
         <div>
             <img class="footer-image" src="icones/logo.svg">
