Adicionando tag <strong>

--- a/references.html
+++ b/references.html
@@ -37,6 +37,12 @@
                     <h3>Define um <strong class="color-text-orange">artigo</strong>.</h3>
                 </div>
             </a>
+            <a class="references-card" href="tags/button.html">
+                <div>
+                    <h1>&lt;button&gt;</h1>
+                    <h3>Define um <strong class="color-text-orange">botão</strong> clicável.</h3>
+                </div>
+            </a>
             <a class="references-card" href="tags/center.html">
                 <div>
                     <h1>&lt;center&gt;</h1>
@@ -44,26 +50,16 @@
                     <h3>Define um texto <strong class="color-text-orange">centralizado</strong>.</h3>
                 </div>
             </a>
-        </div>
-    </div>
-
-    <div class="references-container">
-        <div class="references-cards">
             <a class="references-card" href="tags/table.html">
                 <div>
                     <h1>&lt;table&gt;</h1>
-                    <h3>Define uma <span class="color-text-orange">table em html</span>.</h3>
+                    <h3>Define uma <strong class="color-text-orange">tabela</strong> em html.</h3>
                 </div>
             </a>
-        </div>
-    </div>
-
-    <div class="references-container">
-        <div class="references-cards">
-            <a class="references-card" href="tags/button.html">
+            <a class="references-card" href="tags/strong.html">
                 <div>
-                    <h1>&lt;button&gt;</h1>
-                    <h3>Define um <span class="color-text-orange">butão clicável</span>.</h3>
+                    <h1>&lt;strong&gt;</h1>
+                    <h3>Define um texto <strong class="color-text-orange">importante</strong>.</h3>
                 </div>
             </a>
         </div>
