Criação do Link e correções em outras tags

--- a/references.html
+++ b/references.html
@@ -69,6 +69,17 @@
         </div>
     </div>
 
+    <div class="references-container">
+        <div class="references-cards">
+            <a class="references-card" href="tags/link.html">
+                <div>
+                    <h1>&lt;link&gt;</h1>
+                    <h3>Define um <span class="color-text-orange">o relacionamento entre o documento atual e um recurso externo</span>.</h3>
+                </div>
+            </a>
+        </div>
+    </div>
+
     <div class="footer-container">
         <div>
             <img class="footer-image" src="icones/logo.svg">
