Ultimas Tags_Naum e alteração em um membro.

--- a/about.html
+++ b/about.html
@@ -46,13 +46,13 @@
             </div>
             <div class="about-card">
                 <div>
-                    <img class="about-image" src="icones/anonymous.svg">
+                    <img class="about-image" src="members/Naum.jpeg">
                 </div>
-                <h1><span class="color-text-orange">Anonymous</span></h1>
-                <a>Anonymous</a>
+                <h1><span class="color-text-orange">Friedrich Naum Espíndola</span></h1>
+                <a>Desenvolvedor Front-End</a>
                 <div class="about-container-links">
                     <a href=""><img src="icones/linkedin.svg"></a>
-                    <a class="about-container-icons"><img src="icones/github.svg"></a>
+                    <a class="about-container-icons" href="https://github.com/Naum199825"><img src="icones/github.svg"></a>
                 </div>
             </div>
             <div class="about-card">
