--- a/references.html
+++ b/references.html
@@ -37,6 +37,12 @@
                     <h3>Define um <strong class="color-text-orange">artigo</strong>.</h3>
                 </div>
             </a>
+            <a class="references-card" href="tags/b.html">
+                <div>
+                    <h1>&lt;b&gt;</h1>
+                    <h3>Especifica texto em <strong class="color-text-orange">negrito</strong> sem qualquer importância extra.</h3>
+                </div>
+            </a>
             <a class="references-card" href="tags/button.html">
                 <div>
                     <h1>&lt;button&gt;</h1>
@@ -48,6 +54,18 @@
                     <h1>&lt;center&gt;</h1>
                     <h3><strong class="color-text-orange">NÃO SUPORTADO EM HTML5</strong>. Use CSS em vez disso.</h3>
                     <h3>Define um texto <strong class="color-text-orange">centralizado</strong>.</h3>
+                </div>
+            </a>
+            <a class="references-card" href="tags/details.html">
+                <div>
+                    <h1>&lt;details&gt;</h1>
+                    <h3>Especifica <strong class="color-text-orange">detalhes adicionais</strong> que o usuário pode abrir e fechar sob demanda.</h3>
+                </div>
+            </a>
+            <a class="references-card" href="tags/h1h6.html">
+                <div>
+                    <h1>&lt;h1 - h6&gt;</h1>
+                    <h3>Define <strong class="color-text-orange">cabeçalhos</strong> HTML.</h3>
                 </div>
             </a>
             <a class="references-card" href="tags/table.html">
