--- a/about.html
+++ b/about.html
@@ -40,8 +40,8 @@
                 <h1><span class="color-text-orange">Deise Santana</span></h1>
                 <a>Ui-Design / Desenvolvedor Frontend</a>
                 <div class="about-container-links">
-                    <a href="https://www.linkedin.com/in/deise-santana-503704158/"><img src="icones/linkedin.svg"></a>
-                    <a class="about-container-icons" href="https://github.com/deisesan"><img src="icones/github.svg"></a>
+                    <a href="https://www.linkedin.com/in/deise-santana-503704158/" target="_blank"><img src="icones/linkedin.svg"></a>
+                    <a class="about-container-icons" href="https://github.com/deisesan" target="_blank"><img src="icones/github.svg"></a>
                 </div>
             </div>
             <div class="about-card">
@@ -51,30 +51,30 @@
                 <h1><span class="color-text-orange">Friedrich Naum Espíndola</span></h1>
                 <a>Desenvolvedor Front-End</a>
                 <div class="about-container-links">
-                    <a href=""><img src="icones/linkedin.svg"></a>
-                    <a class="about-container-icons" href="https://github.com/Naum199825"><img src="icones/github.svg"></a>
+                    <a href="" target="_blank"><img src="icones/linkedin.svg"></a>
+                    <a class="about-container-icons" href="https://github.com/Naum199825" target="_blank"><img src="icones/github.svg"></a>
+                </div>
+            </div>
+            <div class="about-card">
+                <div>
+                    <img class="about-image" src="members/Lorena.jpg">
+                </div>
+                <h1><span class="color-text-orange">Lorena Avelino</span></h1>
+                <a>Desenvolvedor Front-End</a>
+                <div class="about-container-links">
+                    <a href="https://www.linkedin.com/in/lorena-avelino-de-oliveira-752856246/" target="_blank"><img src="icones/linkedin.svg"></a>
+                    <a class="about-container-icons" href="https://github.com/Lorena-Avelino" target="_blank"><img src="icones/github.svg"></a>
                 </div>
             </div>
             <div class="about-card">
                 <div>
                     <img class="about-image" src="icones/anonymous.svg">
                 </div>
-                <h1><span class="color-text-orange">Anonymous</span></h1>
-                <a>Anonymous</a>
+                <h1><span class="color-text-orange">Mattheus Mazzillio</span></h1>
+                <a>Desenvolvedor Full Stack</a>
                 <div class="about-container-links">
-                    <a href=""><img src="icones/linkedin.svg"></a>
-                    <a class="about-container-icons"><img src="icones/github.svg"></a>
-                </div>
-            </div>
-            <div class="about-card">
-                <div>
-                    <img class="about-image" src="icones/anonymous.svg">
-                </div>
-                <h1><span class="color-text-orange">Anonymous</span></h1>
-                <a>Anonymous</a>
-                <div class="about-container-links">
-                    <a href=""><img src="icones/linkedin.svg"></a>
-                    <a class="about-container-icons"><img src="icones/github.svg"></a>
+                    <a href="" target="_blank"><img src="icones/linkedin.svg"></a>
+                    <a class="about-container-icons" target="_blank"><img src="icones/github.svg"></a>
                 </div>
             </div>
         </div>
@@ -89,7 +89,7 @@
                 <a class="footer-padding" href="about.html">Sobre nós</a>
             </div>
             <div class="footer-copyright">
-                <a>Copyright&copy;2022</a>
+                <a>Copyright&copy;2023</a>
             </div>
         </div>
     </body>
