--- a/references.html
+++ b/references.html
@@ -43,6 +43,12 @@
                     <h3>Especifica texto em <strong class="color-text-orange">negrito</strong> sem qualquer importância extra.</h3>
                 </div>
             </a>
+            <a class="references-card" href="tags/bdo.html">
+                <div>
+                    <h1>&lt;bdo&gt;</h1>
+                    <h3>Substitui a <strong class="color-text-orange">direção</strong> atual do texto.</h3>
+                </div>
+            </a>
             <a class="references-card" href="tags/button.html">
                 <div>
                     <h1>&lt;button&gt;</h1>
@@ -59,7 +65,7 @@
             <a class="references-card" href="tags/details.html">
                 <div>
                     <h1>&lt;details&gt;</h1>
-                    <h3>Especifica <strong class="color-text-orange">detalhes adicionais</strong> que o usuário pode abrir e fechar sob demanda.</h3>
+                    <h3>Especifica <strong class="color-text-orange">detalhes</strong> adicionais que o usuário pode abrir e fechar sob demanda.</h3>
                 </div>
             </a>
             <a class="references-card" href="tags/h1h6.html">
@@ -68,10 +74,16 @@
                     <h3>Define <strong class="color-text-orange">cabeçalhos</strong> HTML.</h3>
                 </div>
             </a>
-            <a class="references-card" href="tags/table.html">
+            <a class="references-card" href="tags/link.html">
                 <div>
-                    <h1>&lt;table&gt;</h1>
-                    <h3>Define uma <strong class="color-text-orange">tabela</strong> em html.</h3>
+                    <h1>&lt;link&gt;</h1>
+                    <h3>Define um <strong class="color-text-orange">relacionamento entre o documento atual e um recurso externo</strong>.</h3>
+                </div>
+            </a>
+            <a class="references-card" href="tags/picture.html">
+                <div>
+                    <h1>&lt;picture&gt;</h1>
+                    <h3>Define um contêiner para vários recursos de <strong class="color-text-orange">imagem</strong>.</h3>
                 </div>
             </a>
             <a class="references-card" href="tags/strong.html">
@@ -80,15 +92,16 @@
                     <h3>Define um texto <strong class="color-text-orange">importante</strong>.</h3>
                 </div>
             </a>
-        </div>
-    </div>
-
-    <div class="references-container">
-        <div class="references-cards">
-            <a class="references-card" href="tags/link.html">
+            <a class="references-card" href="tags/svg.html">
                 <div>
-                    <h1>&lt;link&gt;</h1>
-                    <h3>Define um <span class="color-text-orange">o relacionamento entre o documento atual e um recurso externo</span>.</h3>
+                    <h1>&lt;svg&gt;</h1>
+                    <h3>Define um contêiner para gráficos <strong class="color-text-orange">SVG</strong>.</h3>
+                </div>
+            </a>
+            <a class="references-card" href="tags/table.html">
+                <div>
+                    <h1>&lt;table&gt;</h1>
+                    <h3>Define uma <strong class="color-text-orange">tabela</strong> em html.</h3>
                 </div>
             </a>
         </div>
@@ -104,7 +117,7 @@
             <a class="footer-padding" href="about.html">Sobre nós</a>
         </div>
         <div class="footer-copyright">
-            <a>Copyright&copy;2022</a>
+            <a>Copyright&copy;2023</a>
         </div>
     </div>
 </body>
