Adicionando a tag body

--- a/references.html
+++ b/references.html
@@ -49,6 +49,12 @@
                     <h3>Substitui a <strong class="color-text-orange">direção</strong> atual do texto.</h3>
                 </div>
             </a>
+            <a class="references-card" href="tags/body.html">
+                <div>
+                    <h1>&lt;body&gt;</h1>
+                    <h3>Define o <strong class="color-text-orange">corpo  do documento</strong> HTML.</h3>
+                </div>
+            </a>
             <a class="references-card" href="tags/button.html">
                 <div>
                     <h1>&lt;button&gt;</h1>
