(projeto-main) ajustado fluxo das tags

--- a/about.html
+++ b/about.html
@@ -35,7 +35,7 @@
         <div class="about-cards">
             <div class="about-card">
                 <div>
-                    <img class="about-image" src="members/deise.png">
+                    <img class="about-image" src="members/Deise.png">
                 </div>
                 <h1><span class="color-text-orange">Deise Santana</span></h1>
                 <a>Ui-Design / Desenvolvedor Frontend</a>
