--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <div class="more-container">
         <div>
             <h1>Referências <strong class="color-text-orange">HTML5</strong></h1>
-            <p>Vamos aprender algumas tags HTML5 no MH5 </p>
+            <p>Vamos aprender algumas tags HTML5</p>
             <a href="references.html">
                 <button class="more-button"><img class="more-text" src="icones/arrow.svg"></button>
             </a>
