(projeto): criado tags deise

--- a/references.html
+++ b/references.html
@@ -31,6 +31,12 @@
 
     <div class="references-container">
         <div class="references-cards">
+            <a class="references-card" href="tags/address.html">
+                <div>
+                    <h1>&lt;address&gt;</h1>
+                    <h3>Define <strong class="color-text-orange">informações de contato</strong> do <strong class="color-text-orange">autor/proprietário</strong> de um documento.</h3>
+                </div>
+            </a>
             <a class="references-card" href="tags/article.html">
                 <div>
                     <h1>&lt;article&gt;</h1>
@@ -74,10 +80,30 @@
                     <h3>Define <strong class="color-text-orange">cabeçalhos</strong> HTML.</h3>
                 </div>
             </a>
+            <a class="references-card" href="tags/head.html">
+                <div>
+                    <h1>&lt;head&gt;</h1>
+                    <h3>Contém <strong class="color-text-orange">metadados/informações</strong> para o documento.</h3>
+                </div>
+            </a>
+            <a class="references-card" href="tags/html.html">
+                <div>
+                    <h1>&lt;html&gt;</h1>
+                    <h3>Define a <strong class="color-text-orange">raiz</strong> de um documento HTML.</h3>
+                </div>
+            </a>
             <a class="references-card" href="tags/link.html">
                 <div>
                     <h1>&lt;link&gt;</h1>
                     <h3>Define um <strong class="color-text-orange">relacionamento entre o documento atual e um recurso externo</strong>.</h3>
+                </div>
+            </a>
+            <a class="references-card" href="tags/meter.html">
+                <div>
+                    <h1>&lt;meter&gt;</h1>
+                    <h3>Define uma <span class="color-text-orange">medida escalar</span> dentro de um 
+                        <span class="color-text-orange">intervalo conhecido</span> ou um 
+                        <span class="color-text-orange">valor fracionário</span>.</h3>
                 </div>
             </a>
             <a class="references-card" href="tags/picture.html">
@@ -90,6 +116,18 @@
                 <div>
                     <h1>&lt;strong&gt;</h1>
                     <h3>Define um texto <strong class="color-text-orange">importante</strong>.</h3>
+                </div>
+            </a>
+            <a class="references-card" href="tags/sub.html">
+                <div>
+                    <h1>&lt;sub&gt;</h1>
+                    <h3>Define um <strong class="color-text-orange">texto subscrito</strong>.</h3>
+                </div>
+            </a>
+            <a class="references-card" href="tags/summary.html">
+                <div>
+                    <h1>&lt;summary&gt;</h1>
+                    <h3>Define um <strong class="color-text-orange">título visível</strong> para um elemento &lt;details&gt;.</h3>
                 </div>
             </a>
             <a class="references-card" href="tags/svg.html">
