(projeto): ajustado nome site

--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="css/global.css"/>
         <link rel="stylesheet" href="css/about.css"/>
         <link rel="icon" href="icones/logo.svg" type="image/svg+xml"/>
-        <title>Manual do HTML5</title>
+        <title>Referências HTML5</title>
     </head>
     <body>
         <div class="menu-container">
@@ -28,7 +28,7 @@
                 <h1>Sobre Nós</h1>
             </div>
             <a>
-                Conheça a equipe de desenvolvedores do Manual do HTML5
+                Conheça a equipe de desenvolvedores do Referências HTML5
             </a>
         </div>
 
