--- a/references.html
+++ b/references.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/global.css"/>
     <link rel="stylesheet" href="css/references.css"/>
     <link rel="icon" href="icones/logo.svg" type="image/svg+xml" />
-    <title>Manual do HTML5</title>
+    <title>Referências HTML5</title>
 </head>
 
 <body>
