adicionando a tag th

--- a/references.html
+++ b/references.html
@@ -110,6 +110,12 @@
                     <h3>Define uma <strong class="color-text-orange">tabela</strong> em html.</h3>
                 </div>
             </a>
+            <a class="references-card" href="tags/th.html">
+                <div>
+                    <h1>&lt;th&gt;</h1>
+                    <h3>Define uma <strong class="color-text-orange">célula de cabeçalho </strong> em em uma tabela HTML.</h3>
+                </div>
+            </a>
         </div>
     </div>
 
