adicionando a tag tr

--- a/references.html
+++ b/references.html
@@ -113,7 +113,13 @@
             <a class="references-card" href="tags/th.html">
                 <div>
                     <h1>&lt;th&gt;</h1>
-                    <h3>Define uma <strong class="color-text-orange">célula de cabeçalho </strong> em em uma tabela HTML.</h3>
+                    <h3>Define uma <strong class="color-text-orange">célula de cabeçalho </strong> em uma tabela HTML.</h3>
+                </div>
+            </a>
+            <a class="references-card" href="tags/tr.html">
+                <div>
+                    <h1>&lt;tr&gt;</h1>
+                    <h3>Define uma <strong class="color-text-orange">linha </strong> em uma tabela HTML.</h3>
                 </div>
             </a>
         </div>
