Adicionando tag tt

--- a/references.html
+++ b/references.html
@@ -122,6 +122,13 @@
                     <h3>Define uma <strong class="color-text-orange">linha </strong> em uma tabela HTML.</h3>
                 </div>
             </a>
+            <a class="references-card" href="tags/tt.html">
+                <div>
+                    <h1>&lt;tt&gt;</h1>
+                    <h3><strong class="color-text-orange">NÃO SUPORTADO EM HTML5</strong>. Use CSS em vez disso.</h3>
+                    <h3>Define o tipo de <strong class="color-text-orange">fonte</strong> do texto.</h3>
+                </div>
+            </a>
         </div>
     </div>
 
