adicionando a tag title

--- a/references.html
+++ b/references.html
@@ -116,6 +116,12 @@
                     <h3>Define uma <strong class="color-text-orange">célula de cabeçalho </strong> em uma tabela HTML.</h3>
                 </div>
             </a>
+            <a class="references-card" href="tags/title.html">
+                <div>
+                    <h1>&lt;title&gt;</h1>
+                    <h3>Define um <strong class="color-text-orange">título </strong> para se documento HTML.</h3>
+                </div>
+            </a>
             <a class="references-card" href="tags/tr.html">
                 <div>
                     <h1>&lt;tr&gt;</h1>
