adicionando a tag section

--- a/references.html
+++ b/references.html
@@ -92,6 +92,12 @@
                     <h3>Define um contêiner para vários recursos de <strong class="color-text-orange">imagem</strong>.</h3>
                 </div>
             </a>
+            <a class="references-card" href="tags/section.html">
+                <div>
+                    <h1>&lt;section&gt;</h1>
+                    <h3>Define uma<strong class="color-text-orange"> sessão </strong>em um documento.</h3>
+                </div>
+            </a>
             <a class="references-card" href="tags/strong.html">
                 <div>
                     <h1>&lt;strong&gt;</h1>
