adicionando contribuidor mazzillio

--- a/about.html
+++ b/about.html
@@ -68,13 +68,13 @@
             </div>
             <div class="about-card">
                 <div>
-                    <img class="about-image" src="icones/anonymous.svg">
+                    <img class="about-image" src="members/Mazzillio.jpg">
                 </div>
                 <h1><span class="color-text-orange">Mattheus Mazzillio</span></h1>
                 <a>Desenvolvedor Full Stack</a>
                 <div class="about-container-links">
-                    <a href="" target="_blank"><img src="icones/linkedin.svg"></a>
-                    <a class="about-container-icons" target="_blank"><img src="icones/github.svg"></a>
+                    <a href="https://www.linkedin.com/in/mattheus-mazzillio/" target="_blank"><img src="icones/linkedin.svg"></a>
+                    <a class="about-container-icons" href="https://github.com/mazzillio" target="_blank"><img src="icones/github.svg"></a>
                 </div>
             </div>
         </div>
